chore(README.md): update section title from "Build status" to "Status" for clarity and consistency style(main.css): adjust flex-basis and padding values for .certification-item to improve layout and spacing style(main.css): set height of .certification-item img to auto to prevent image distortion

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1062,15 +1062,15 @@
 }
 
 .certification-item {
-	flex-basis: 10%; /* Adjust this value as needed based on the desired number of columns */
-	padding: 10px;
+	flex-basis: 5%; /* Adjust this value as needed based on the desired number of columns */
+	padding: 5px;
 	text-align: center;
 }
 
 /* Ensure images don't exceed their parent container */
 .certification-item img {
 	max-width: 100%;
-	height: 50%;
+	height: auto;
 }
 
 /* Adjust the layout of the footer content */
